# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
2015/01/: part1.kts  part2.kts
2024/: README.md
2024/02/: part1.py  part2.py
2024/03/: part2.py
2024/05/: part1.py
2024/07/: part2.py
2024/08/: part1.py
2024/09/: part1.py  part2.py
2024/1/: part1.py  part2.py
2024/10/: part1_2.py
2024/11/: part1.py  part1_generators.py  part2.py
2024/12/: part1.py  part2.py
2024/13/: part1.py  part2.py
2024/14/: part1.py  part2.py
2024/15/: part1.py  part2.py
2024/16/: part1.py  part2.py
2024/17/: part1.py  part2.py
2024/18/: part1.py  part2.py
2024/19/: part1.py  part2.py
2024/2/: part1.py
2024/20/: part1.py  part2.py
2024/21/: part1.py  part2.py
2024/22/: part1.py
2024/22/part2/: part2-bidding.py  part2-prices.py
2024/23/: part1.py  part2.py
2024/24/: part1.py  part2.py
2024/25/: part1.py
2024/3/: part1.py
2024/4/: part1.py  part2.py
2024/5/: part2.py
2024/6/: part1.py  part2.py
2024/7/: part1.py
2024/8/: part2.py
2025/: README.md
2025/01/: part1.kts  part2.kts
2025/02/: part1.kts  part2.kts
2025/03/: part1.kts  part2.kts
2025/04/: part1.kts  part2.kts
2025/05/: part1.kts  part2.kts
2025/06/: part1.kts  part2.kts
2025/07/: part1.kts  part2.kts
2025/08/: part1.kts  part2.kts
2025/09/: part1.kts  part2.kts
2025/10/: part1.kts  part2.py
2025/11/: part1.kts  part2.kts
2025/12/: part1.kts
