[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Zac Hayes <zhayes@visiostack.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
pillow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
