[project]
name = "advent-of-code"
authors = ["Zac Hayes <zhayes@visiostack.com>"]
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "pillow>=11.3.0",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "z3-solver>=4.15.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
